--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<button class="gallery-btn" aria-label="查看相册">相册</button>
 					<div class="timeline-photos" style="display:none">
 						<div data-url="images/c77f89aaad4756b5bc5df866816f0d02.jpg" data-desc="去机场接你，多少有点紧张。"></div>
-						<div data-url="images/video/IMG_1761.MOV" data-desc="不是我说，一眼就看到你了。" data-type="video"></div>
+						<div data-url="images/video/IMG_1761.mp4" data-desc="不是我说，一眼就看到你了。" data-type="video"></div>
             <div data-url="images/fc210147f1ac9cc14882116e44c694d4.jpg" data-desc="初次见面的青涩，在地铁上表现得淋漓尽致。【现在这嘴巴也是越来越厉害了(〃＞目＜)】"></div>
             <div data-url="images/20251125142208.jpg" data-desc="收到的第一份礼物，来自遥远的黑龙江，太喜欢了！"></div>
             <div data-url="images/cf19b535aa5bb14b2016df313960c0ac.jpg" data-desc="糟粕醋火锅！emmm，海南人口味挺重的。"></div>
