--- a/index.html
+++ b/index.html
@@ -177,13 +177,12 @@
 		<div id="gift-modal" class="modal hidden">
 			<div class="modal-content postcard" id="postcard">
 				<div class="postcard-inner">
-					<h2>亲爱的：</h2>
+					<h2>致殷楚俊：</h2>
 					<p>生日快乐！</p>
 					<p>这是我们在一起度过的第一个生日。</p>
 					<p>愿未来的每一天，你都能开开心心，心想事成。</p>
-          <p>也祝愿我们能够一起成长，一起面对困难，携手前进。</p>
-          <p>想要跟你去好多好多地方。</p>
-					<p class="sign">永远爱你的，<br>刘洲铭</p>
+          <p>也祝愿我们能够一起成长，共同进步。</p>
+					<p class="sign"><br>刘洲铭</p>
 				</div>
 				<button id="flip-btn" class="flip-btn">Next ➜</button>
 			</div>
